<resources>
    <string name="app_name">HomeGuard</string>

    <string name="title_home">Home</string>
    <string name="title_camera_preview">Camera Preview</string>
    <string name="title_face_gallery">Face Gallery</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_new_face">Add New Face</string>
    <string name="title_postman">Set Postman</string>

    <string name="camera_recognized_faces">Recognized Face:</string>
    <string name="camera_add_faces">Add Face</string>
    <string name="camera_recognize">Recognize</string>
    <string name="safety_uppercase">SAFETY</string>
    <string name="waitning_for_detection">Waitning for detection</string>

    <string name="no_face">No face detected!</string>
    <string name="existing_face">This face is already saved!</string>
    <string name="history">History</string>
    <string name="default_timer">2000.20.20</string>
    <string name="delete_history">Delete History</string>
    <string name="face">Face</string>
    <string name="delete">Delete</string>
    <string name="set_postman">Set postman</string>
    <string name="choose_postman">Choose one new postman:</string>
    <string name="current_postman">Current Postman</string>

</resources>