<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_camera_preview"
        android:name="hu.geribruu.homeguardbeta.ui.cameraScreen.CameraPreviewFragment"
        android:label="@string/title_camera_preview"
        tools:layout="@layout/fragment_camera_preview" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="hu.geribruu.homeguardbeta.ui.homeScreen.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_face_gallery"
        android:name="hu.geribruu.homeguardbeta.ui.faceGalleryScreen.FaceGalleryFragment"
        android:label="@string/title_face_gallery"
        tools:layout="@layout/fragment_face_gallery" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="hu.geribruu.homeguardbeta.ui.historyScreen.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="hu.geribruu.homeguardbeta.ui.settingsScreen.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>